Fixed white space issue when content isn't deep enough to create a scrolling page.

--- a/styles.css
+++ b/styles.css
@@ -339,6 +339,23 @@ h2 {
   border: 1px solid rebeccapurple;
 }
 
+/* PAGE BACKGROUND FILLER */ 
+
+.nav-filler {
+  background-color: var(--blue-curious);
+  width: 250px;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -3;
+}
+
+body {
+  background-color: var(--white-catskill);
+  z-index: -4;
+}
+
 /* FOOTER */
 
 .attribution {
@@ -434,7 +451,7 @@ h2 {
 
   main {
     grid-template-columns: minmax(300px, auto) minmax(250px, 300px);
-    grid-template-rows: auto;
+    grid-template-rows: 320px auto;
     padding: 20px 10px;
     gap: 20px 20px;
   }
@@ -489,8 +506,8 @@ h2 {
 
   .trending {
     grid-column: 2 / 3;
-    grid-row: 1 / 2;
-    margin-top: 320px;
+    grid-row: 2 / 3;
+    /* margin-top: 320px; */
   }
 }
 
@@ -528,6 +545,7 @@ h2 {
 
   .projects-container {
     grid-template-columns: minmax(290px, 500px) minmax(290px, 500px);
+    grid-template-rows: repeat(3, 200px);
     gap: 30px 30px;
   }
 }
